--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -8,16 +8,18 @@
   width: 100vw;
   height: 100vh;
 
-  background-color: grey;
+  background-color: rgb(240, 234, 234);
 }
 
 .card-container {
+  margin-top: 30px;
   width: 1400px;
   background-color: white;
   padding: 20px;
   position: fixed;
   right: 100px;
   top: 100px;
+  border-radius: 20px;
 }
 
 .Cardnavbar {
@@ -27,25 +29,44 @@
 }
 
 .btn-addcard {
-  width: 200px;
+  width: 150px;
+  padding: 1rem;
+  border-radius: 6px;
+  background-color: #8146ff;
+  color: white;
 }
 
 .card-body {
   display: flex;
   align-items: center;
-  justify-content: space-around;
 }
 
 .card-item1 {
-  width: 150px;
+  margin-right: 20px;
+  margin-left: 20px;
+  width: 200px;
   height: 250px;
-  background: yellow;
+  border-radius: 10px;
+  background: #b9a1f8;
+
+  /* shadow */
+  -webkit-box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.1);
 }
 
 .card-item2 {
-  width: 150px;
+  margin-right: 20px;
+  margin-left: 20px;
+  width: 200px;
   height: 250px;
-  background: purple;
+  border-radius: 10px;
+  background: #fdd674;
+
+  /* shadow */
+  -webkit-box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.1);
 }
 
 .bottom-container {
@@ -67,26 +88,54 @@
   width: 50%;
   display: flex;
   height: 100%;
-  flex-direction: column;
-  padding-top: 8%;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
-  background-color: rgb(79, 0, 250);
 }
-.asset-container {
-  width: 100px;
-  height: 70px;
-}
-
 .overall-item1 .overall-item2 {
   display: flex;
-  justify-content: space-around;
-  width: 50%;
-  flex-direction: row;
 }
 
-.balance .spending .saved .netgross {
-  width: 50px;
-  height: 50px;
+.asset-container {
+  width: 250px;
+  height: 150px;
+  margin: 20px;
+}
+
+.balance,
+.spending,
+.saved,
+.netgross {
+  backdrop-filter: blur(10px) saturate(100%);
+  -webkit-backdrop-filter: blur(10px) saturate(100%);
+  background-color: rgba(255, 255, 255, 0.73);
+  border-radius: 12px;
+  border: 1px solid rgba(209, 213, 219, 0.3);
+
+  /* box shadow */
+  -webkit-box-shadow: 10px 10px 17px 0px rgba(0, 0, 0, 0.13);
+  -moz-box-shadow: 10px 10px 17px 0px rgba(0, 0, 0, 0.13);
+  box-shadow: 10px 10px 17px 0px rgba(0, 0, 0, 0.13);
+}
+
+.nav-bar {
+  position: fixed;
+  width: 100vw;
+  height: 90px;
+  background-color: white;
   z-index: 5;
-  background-color: rgba(31, 117, 238, 0.416);
+  padding: 1rem;
+}
+
+.side-bar {
+  position: fixed;
+  width: 300px;
+  height: 100vh;
+  background-color: white;
+}
+
+.logout-btn {
+  width: 100px;
+  height: 50px;
+  padding: 1rem;
 }
