--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,8 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: "Poppins", source-code-pro, Menlo, Monaco, Consolas,
+    "Courier New", monospace;
 }
 
 .heading {
@@ -53,6 +53,10 @@ button {
   width: 100%;
   border-radius: 6px;
   font-size: 18px;
+
+  /* -webkit-box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.1); */
 }
 
 button:hover {
@@ -66,7 +70,6 @@ button:hover {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  /* width: 400px; */
   padding: 22px;
 }
 
